# SpatialAlgebra

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/html/: _articulated_body_inertia_8h.html  _articulated_body_inertia_8h_source.html  _axial_screw_transform_8h_source.html  _force_vector_8h.html  _force_vector_8h_source.html  _motion_vector_8h.html  _motion_vector_8h_source.html  _plucker_transform_8h.html  _plucker_transform_8h_source.html  _rigid_body_inertia_8h.html  _rigid_body_inertia_8h_source.html  _rotation_8h.html  _rotation_8h_source.html  _spatial_operations_8h.html  _spatial_operations_8h_source.html  _spatial_utils_8h.html  _spatial_utils_8h_source.html  _spatial_vector_8h_source.html  annotated.html  class_rotation-members.html  class_rotation.html  class_spatial_algebra_1_1_articulated_body_inertia-members.html  class_spatial_algebra_1_1_articulated_body_inertia.html  class_spatial_algebra_1_1_force_vector-members.html  class_spatial_algebra_1_1_force_vector.html  class_spatial_algebra_1_1_motion_vector-members.html  class_spatial_algebra_1_1_motion_vector.html  class_spatial_algebra_1_1_plucker_transform-members.html  classes.html  files.html  (+15 more)
include/: ArticulatedBodyInertia.h  ForceVector.h  LowerTriangular.h  MotionVector.h  PluckerTransform.h  RigidBodyInertia.h  Rotation.h  SpatialOperations.h  SpatialUtils.h  SpatialVector.h
src/: ArticulatedBodyInertia.cpp  ForceVector.cpp  MotionVector.cpp  PluckerTransform.cpp  RigidBodyInertia.cpp  Rotation.cpp  SpatialVector.cpp  main.cpp
tests/: TestPluckerTransform.cpp  TestSpatialVector.cpp
(+65 files in other folders)
